Aggiunta foto nel photoslider aggiunta mail

--- a/footer.html
+++ b/footer.html
@@ -48,7 +48,12 @@
 
         <div>
             <i class="fa fa-envelope"></i>
-            <p><a href="mailto:gesa.srl_@libero.it">info@gesasrl.net</a></p>
+            <p><a href="mailto:info@gesasrl.net">info@gesasrl.net</a></p>
+        </div>
+
+        <div>
+            <i class="fa fa-envelope"></i>
+            <p><a href="mailto:amministrazione@gesasrl.net">amministrazione@gesasrl.net</a></p>
         </div>
 
     </div>
